# SmartDesk-AI

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
data/: README.md
data/knowledge_base/hr_docs/: annual_leave_entitlement_and_booking_vacation.json  annual_leave_entitlement_and_vacation_booking.json  benefits_enrollment_health_insurance_and_dental_options.json  code_of_conduct_and_workplace_behavior_expectations.json  employee_onboarding_checklist_and_first_week_steps.json  employee_referral_program_and_bonus_policy.json  expense_reimbursement_process_and_submission_deadlines.json  payroll_schedule_and_accessing_pay_stubs.json  performance_review_process_and_self_assessment_tips.json  remote_and_hybrid_work_policy_eligibility_and_expectations.json  sick_leave_policy_and_reporting_absences.json  submitting_a_grievance_complaint_or_hr_concern.json  synthetic_hr_001.json  synthetic_hr_002.json  synthetic_hr_003.json  synthetic_hr_004.json  synthetic_hr_005.json  synthetic_hr_006.json  synthetic_hr_007.json  synthetic_hr_008.json  synthetic_hr_009.json  synthetic_hr_010.json  synthetic_hr_011.json  synthetic_hr_012.json  training_budget_and_professional_development_request_process.json  training_budget_and_professional_development_requests.json
data/knowledge_base/it_docs/: accessing_shared_network_drives_and_file_shares.json  how_to_access_shared_network_drives_and_file_shares.json  synthetic_it_001.json  (+40 more)
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  architecture.drawio
scripts/: build_knowledge_base.py  generate_synthetic_docs.py  run_evaluation.py  run_langsmith_eval.py
src/smartdesk/: __init__.py  _log.py  config.py  main.py
tests/: conftest.py  test_guardrails.py  test_retriever.py  test_supervisor_routing.py  test_ticket_creation_agent.py  test_ticket_status_agent.py  test_ui_app.py
(+22 files in other folders)
