[project]
name = "smartdesk"
version = "0.1.0"
description = "SmartDesk AI - IT & HR Operations Agent (capstone project)"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
