[project]
name = "smartdesk"
version = "0.1.0"
description = "SmartDesk AI - IT & HR Operations Agent (capstone project)"
requires-python = ">=3.10"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # LLM SDK (default provider)
    "openai>=1.40.0",
    # Orchestration
    "langgraph>=0.2.0",
    # Vector store + embeddings
    "qdrant-client>=1.10.0",
    "fastembed>=0.3.0",
    # Observability
    "langsmith>=0.1.0",
    # UI
    "gradio>=5.50.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
